Fix header image on firefox

--- a/site/pages/our-work/case-study/car-trawler-my-account/header-img/styles.css
+++ b/site/pages/our-work/case-study/car-trawler-my-account/header-img/styles.css
@@ -7,6 +7,7 @@
 .image {
   align-self: flex-start;
   max-width: 100%;
+  flex: 0 0 auto;
 }
 
 .wide {
@@ -21,20 +22,20 @@
 
 .leftFill {
   background: url(./images/leftpanel.jpg);
-  background-size: 182px 400px;
+  background-size: 136px 100%;
   background-position-x: right;
   width: 100%;
-  background-repeat-x: repeat;
+  background-repeat: repeat;
   position: relative;
   right: -1px;
 }
 
 .rightFill {
   background: url(./images/rightpanel.jpg);
-  background-size: 183px 400px;
+  background-size: 136px 100%;
   background-position-x: left;
   width: 100%;
-  background-repeat-x: repeat;
+  background-repeat: repeat;
   position: relative;
   left: -1px;
 }
